# ckanext-pygments

./: README.md  pyproject.toml  setup.cfg  test.ini
.github/workflows/: test.yml
ckanext/pygments/: cache.py  config.py  config_declaration.yaml  config_schema.yaml  helpers.py  plugin.py  utils.py  views.py
ckanext/pygments/assets/: script.js  webassets.yml
ckanext/pygments/assets/css/: pygments.css
ckanext/pygments/assets/js/: pygment-line-highlight.js
ckanext/pygments/logic/: schema.py
ckanext/pygments/templates/: pygment_form.html  pygment_preview.html
ckanext/pygments/templates/package/snippets/: resource_view.html
ckanext/pygments/templates/pygments/: config.html  pygment_form.html  pygment_preview.html  pygment_preview_body.html
