[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "ckanext-pygments"
version = "1.3.0"
description = "Provides previews with syntax highlight for multiple formats"
authors = [
    { name = "DataShades", email = "datashades@linkdigital.com.au" },
    { name = "Sergey Motornyuk", email = "sergey.motornyuk@linkdigital.com.au" },
    { name = "Oleksandr Cherniavskyi", email = "mutantsan@gmail.com" },
]
maintainers = [{ name = "DataShades", email = "datashades@linkdigital.com.au" }]
license = { text = "AGPL" }
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["CKAN"]
urls = { Homepage = "https://github.com/DataShades/ckanext-pygments" }
dependencies = ["Pygments>=2.19.2,<3.0.0"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.entry-points]
"babel.extractors" = { ckan = "ckan.lib.extract:extract_ckan" }

[project.entry-points."ckan.plugins"]
pygments_view = "ckanext.pygments.plugin:PygmentsPlugin"

[project.optional-dependencies]
admin = ["ckanext-admin_panel>=1.0.14"]

[tool.setuptools.packages]
find = {}

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::sqlalchemy.exc.SADeprecationWarning",
    "ignore::sqlalchemy.exc.SAWarning",
    "ignore::DeprecationWarning",
]
addopts = "--ckan-ini test.ini"

[tool.ruff.lint.isort]
section-order = [
    "future",
    "standard-library",
    "first-party",
    "third-party",
    "ckan",
    "ckanext",
    "self",
    "local-folder",
]

[tool.ruff.lint.isort.sections]
ckan = ["ckan"]
ckanext = ["ckanext"]
self = ["ckanext.pygments"]


[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",   # likely bugs and design problems
    "BLE", # do not catch blind exception
    "C40", # better list/set/dict comprehensions
    "C90", # check McCabe complexity
    "COM", # trailing commas
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "G",   # format strings for logging statements
    "N",   # naming conventions
    "PL",  # pylint
    "PT",  # pytest style
    "PIE", # misc lints
    "Q",   # preferred quoting style
    "RET", # improvements for return statements
    "RSE", # improvements for rise statements
    # "S",  # security testing
    "SIM", # simplify code
    "T10", # debugging statements
    "T20", # print statements
    "TID", # tidier imports
    "TRY", # better exceptions
    "UP",  # upgrade syntax for newer versions of the language
]
ignore = [
    "E712",    # comparison to bool: violated by SQLAlchemy filters
    "PLC1901", # simplify comparison to empty string: violated by SQLAlchemy filters
    "TRY003",  # allow providing an error message to exception instance
    "COM812", # conflicts with `ruff format`
]

[tool.ruff.lint.per-file-ignores]
"ckanext/pygments/logic/schema.py" = ["PLR0913"]

[tool.ruff.format]
quote-style = "double"
